# image_writer

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  package.xml
bags/: 2023-04-06-16-03-27.bag  new_bag.bag
include/Private/: ImageWriter.cpp
include/Public/: ImageWriter.h
launch/: save_multi_raw_image_stream.launch  save_raw_image_stream.launch
output/: example_video.avi  test_video.avi  video.avi
params/: params.yaml
scripts/: rosbag_manip.py
src/: save_raw_image_stream.cpp
